# externam-hub

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  package.json  pyproject.toml  requirements.txt  run.py
apps/backend/app/: main.py  models.py  startup.py
apps/backend/app/alembic/: env.py
apps/backend/app/alembic/versions/: 10c023269e3c_add_client_conversion_goal.py  13917b5d8c67_initial_users.py  18fc44068ccd_add_email_templates.py  248acfdc7800_client_multi_emails_contact_phone.py  6cbc25e9bb60_add_client_meta_business_id.py  762d503b4725_add_clients.py  a1b2c3d4e5f6_add_audit_logs.py  b483acf977ea_add_client_company.py  b5b1a8ed8557_add_email_settings.py  b7d3f1928c4a_add_audit_changes.py  c4e1d2a9f7b3_add_client_managed_campaign_ids.py  d7b2f1a3c9e4_drop_client_conversion_goal.py  e8c1a4f6b2d9_add_email_settings_from_name.py  (+2 more)
apps/backend/app/core/: config.py  email.py  errors.py  exceptions.py  logging.py  middleware.py  security.py
apps/backend/app/db/: base.py  session.py
apps/backend/app/scripts/: render_preview.py  test_email.py  verify_report.py
apps/backend/app/shared/: pagination.py  utils.py
apps/backend/app/workers/: scheduler.py  tasks.py
apps/backend/scripts/: generate_keys.py
apps/backend/tests/: conftest.py  test_audit.py  test_clients.py  test_email_templates.py  test_meta_ads.py  test_portfolios.py  test_settings.py  test_user.py  test_users_rbac.py
(+107 files in other folders)
