[project]
name = "externam-backend"
version = "1.0.0"
description = "Externam Hub FastAPI backend"
requires-python = ">=3.12"

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["app/alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["B008"]  # FastAPI Depends() en valeur par défaut est idiomatique

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]  # imports volontairement après le setup d'environnement

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
